# python-hsautoapi

./: setup.cfg
hsautoapi/: gamestate.py  main.py
hsautoapi/apicalls/: debugdrawingapicalls.py
