[metadata]
name = hsautoapi
version = 0.1
description = Hearthstone automation api
author = some individual
author_email = not@existant.com
url = blank
download_url = blank
classifiers=[
        'Development Status :: 1 - Alpha',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3.7',
        'Topic :: AI tryouts',
      ],

[options]
packages = find:
install_requires =
  hslog

  # dependencies for kivy
  # python -m pip install --upgrade pip wheel setuptools
  # python -m pip install docutils pygments pypiwin32 kivy.deps.sdl2 kivy.deps.glew
  # python -m pip install kivy
  docutils 
  pygments 
  pypiwin32 
  kivy.deps.sdl2
  kivy.deps.glew
  kivy

[options.packages.find]
exclude = tests
